feat：爱彼迎项目完结，增加了entire页面和detail页面以及优化app-header动效

--- a/airbnb/package.json
+++ b/airbnb/package.json
@@ -48,6 +48,8 @@
     ]
   },
   "devDependencies": {
-    "@craco/craco": "^7.0.0-alpha.9"
+    "@craco/craco": "^7.0.0-alpha.9",
+    "react-transition-group": "^4.4.5",
+    "underscore": "^1.13.6"
   }
 }
