--- a/react18_ts_music/package.json
+++ b/react18_ts_music/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@ant-design/icons": "^5.2.6",
     "@reduxjs/toolkit": "^1.9.7",
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
@@ -11,6 +12,7 @@
     "@types/node": "^16.18.59",
     "@types/react": "^18.2.33",
     "@types/react-dom": "^18.2.14",
+    "antd": "^5.10.3",
     "axios": "^1.1.3",
     "craco-less": "^2.1.0-alpha.0",
     "normalize.css": "^8.0.1",
@@ -49,9 +51,11 @@
   },
   "devDependencies": {
     "@craco/craco": "^7.0.0-alpha.9",
+    "@types/styled-components": "^5.1.29",
     "eslint": "^8.52.0",
     "eslint-config-prettier": "^9.0.0",
     "eslint-plugin-prettier": "^5.0.1",
-    "prettier": "^3.0.3"
+    "prettier": "^3.0.3",
+    "styled-components": "^6.1.0"
   }
 }
